--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,8 @@ dependencies:
   cupertino_icons: ^1.0.8
   google_fonts: ^6.3.2
   responsive_framework: ^1.5.1
+  carousel_slider: ^5.1.1
+  simple_animations: ^5.2.0
 
 dev_dependencies:
   flutter_test:
