--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,8 @@ dependencies:
   responsive_framework: ^1.5.1
   carousel_slider: ^5.1.1
   simple_animations: ^5.2.0
+  provider: ^6.1.5+1
+  bouncing_widget: ^2.0.0
 
 dev_dependencies:
   flutter_test:
